# bingfu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
bingfu/: __init__.py  agent.py  bingfu.py  cli.py  commander.py  memory.py  signal.py  tactics.py  tool.py
bingfu/llm/: __init__.py  base.py  config.py  deepseek.py  factory.py  openai_provider.py
bingfu/visual/: __init__.py  components.py  console.py  styles.py
examples/: basic_usage.py  cli_guide.py  console_demo.py  custom_agent.py  famous_generals.py  llm_usage.py  memory_usage.py  multi_agent.py  quickstart.py  tool_usage.py
tests/: __init__.py  test_agent.py  test_commander.py  test_memory.py  test_signal.py  test_tactics.py  test_tool.py  test_visual.py
